# robit-ros2-homework

./: README.md
HW1/: README .md
HW1/myteleop/: CMakeLists.txt  package.xml
HW1/myteleop/src/: myteleop.cpp
HW2/: README.md
HW2/my_custom_interfaces/: CMakeLists.txt  package.xml
HW2/my_publisher/: CMakeLists.txt
HW2/my_publisher/src/: publisher_node.cpp
HW2/my_subscriber/: CMakeLists.txt
HW2/my_subscriber/src/: subscriber_node.cpp
HW3/: REEDME.md
HW3/turtle_control/: CMakeLists.txt  package.xml
HW3/turtle_control/include/turtle_control/: main_window.hpp  qnode.hpp
HW3/turtle_control/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
HW3/turtle_control/install/turtle_control/lib/turtle_control/: turtle_control
HW3/turtle_control/install/turtle_control/share/ament_index/resource_index/package_run_dependencies/: turtle_control
HW3/turtle_control/install/turtle_control/share/turtle_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
HW3/turtle_control/install/turtle_control/share/turtle_control/cmake/: turtle_controlConfig.cmake
HW3/turtle_control/resources/: images.qrc
HW3/turtle_control/src/: main.cpp  main_window.cpp  qnode.cpp
HW3/turtle_control/ui/: mainwindow.ui
HW4/: REEDME.md
HW4/gameplay/: CMakeLists.txt  package.xml
HW4/gameplay/include/gameplay/: main_window.hpp  qnode.hpp
HW4/gameplay/resources/: images.qrc
HW4/gameplay/src/: main.cpp  main_window.cpp  qnode.cpp
HW4/gameplay/ui/: mainwindow.ui
HW4/keypad/: CMakeLists.txt  package.xml
HW4/keypad/include/keypad/: main_window.hpp  qnode.hpp
HW4/keypad/src/: main.cpp  main_window.cpp  qnode.cpp
HW4/keypad/ui/: mainwindow.ui
