<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- 패키지 형식 버전 3을 지정 -->
<package format="3">
  <name>my_custom_interfaces</name> <!-- 패키지 이름 -->
  <version>0.0.0</version> <!-- 패키지 버전 -->
  <description>
  A custom interface package for demonstrating ROS2 message passing
  and node communication.
  </description> 
  <maintainer email="dldnjswns7412@gmail.com">lwj</maintainer> <!-- 패키지 유지 관리자의 이름과 이메일 -->
  <license>TODO: License declaration</license> 

  <buildtool_depend>ament_cmake</buildtool_depend> <!-- 빌드 도구 의존성: ament_cmake -->

  <!-- 메시지 생성기를 위한 의존성 추가 -->
  <build_depend>rosidl_default_generators</build_depend> <!-- 빌드 시간 의존성: ROS2 메시지 생성기 -->
  <exec_depend>rosidl_default_runtime</exec_depend> <!-- 실행 시간 의존성: ROS2 메시지 런타임 -->

  <test_depend>ament_lint_auto</test_depend> <!-- 테스트 의존성: 자동 코드 검사 도구 -->
  <test_depend>ament_lint_common</test_depend> <!-- 테스트 의존성: 공통 코드 검사 도구 -->

  
  <member_of_group>rosidl_interface_packages</member_of_group> <!-- ROS2 인터페이스 패키지 그룹의 멤버로 설정 -->

  <export>
    <build_type>ament_cmake</build_type> <!-- 패키지 빌드 타입: ament_cmake -->
  </export>
</package>



